product_docs/docs/hadoop_data_adapter/2.0.8/05_installing_the_hadoop_data_adapter.mdx
---
title: "Installing the Hadoop Foreign Data Wrapper"
---

<div id="installing_the_hadoop_data_adapter" class="registered_link"></div>

The Hadoop Foreign Data Wrapper can be installed with an RPM package. During the installation process, the installer will satisfy software prerequisites. If yum encounters a dependency that it cannot resolve, it will provide a list of the required dependencies that you must manually resolve.

<div id="using_an_rpm_package_to_install_the_data_adapter" class="registered_link"></div>

## Installing the Hadoop Foreign Data Wrapper using an RPM Package

You can install the Hadoop Foreign Data Wrapper using an RPM package on the following platforms:

-   [RHEL or CentOS 7 PPCLE](#rhel_centos7_PPCLE)
-   [RHEL 7](#rhel7)
-   [RHEL 8](#rhel8)
-   [CentOS 7](#centos7)
-   [Rocky Linux/AlmaLinux 8](#centos8)

<div id="rhel_centos7_PPCLE" class="registered_link"></div>

### On RHEL or CentOS 7 PPCLE

1.  Use the following command to create a configuration file and install Advance Toolchain:

    ```text
    rpm --import https://public.dhe.ibm.com/software/server/POWER/Linux/toolchain/at/redhat/RHEL7/gpg-pubkey-6976a827-5164221b

    cat > /etc/yum.repos.d/advance-toolchain.repo <<EOF
    # Begin of configuration file
    [advance-toolchain]
    name=Advance Toolchain IBM FTP
    baseurl=https://public.dhe.ibm.com/software/server/POWER/Linux/toolchain/at/redhat/RHEL7
    failovermethod=priority
    enabled=1
    gpgcheck=1
    gpgkey=ftp://public.dhe.ibm.com/software/server/POWER/Linux/toolchain/at/redhat/RHELX/gpg-pubkey-6976a827-5164221b
    # End of configuration file
    EOF
    ```

2.  Install the EDB repository:

    ```text
    yum -y install https://yum.enterprisedb.com/edbrepos/edb-repo-latest.noarch.rpm
    ```

3.  Replace ‘USERNAME:PASSWORD’ below with your username and password for the EDB repositories:

    ```text
    sed -i "s@<username>:<password>@USERNAME:PASSWORD@" /etc/yum.repos.d/edb.repo
    ```

4.  Install the EPEL repository:

    ```text
    yum -y install https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
    ```

5.  On RHEL 7 PPCLE, enable the additional repositories to resolve EPEL dependencies:

    ```text
    subscription-manager repos --enable "rhel-*-optional-rpms" --enable "rhel-*-extras-rpms"  --enable "rhel-ha-for-rhel-*-server-rpms"
    ```

6.  Install the selected package:

    ```text
    dnf install edb-as<xx>-hdfs_fdw
    ```

    where `xx` is the server version number.


<div id="rhel7" class="registered_link"></div>

### On RHEL 7

1.  To create the repository configuration file, assume superuser privileges, and invoke the following command:

    ```text
    yum -y install https://yum.enterprisedb.com/edbrepos/edb-repo-latest.noarch.rpm
    ```

2.  Replace ‘USERNAME:PASSWORD’ below with your username and password for the EDB repositories:

    ```text
    sed -i "s@<username>:<password>@USERNAME:PASSWORD@" /etc/yum.repos.d/edb.repo
    ```

3.  Install the EPEL repository:

    ```text
    yum -y install https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
    ```

4.  Enable the additional repositories to resolve dependencies:

    ```text
    subscription-manager repos --enable "rhel-*-optional-rpms" --enable "rhel-*-extras-rpms"  --enable "rhel-ha-for-rhel-*-server-rpms"
    ```

5.  Install the selected package:

    ```text
    dnf install edb-as<xx>-hdfs_fdw
    ```

    where `xx` is the server version number.




<div id="rhel8" class="registered_link"></div>

### On RHEL 8

1. To create the repository configuration file, assume superuser privileges, and invoke the following command:
    
    ```text
    dnf -y install https://yum.enterprisedb.com/edbrepos/edb-repo-latest.noarch.rpm
    ```

2.  Replace ‘USERNAME:PASSWORD’ below with your username and password for the EDB repositories:

    ```text
    sed -i "s@<username>:<password>@USERNAME:PASSWORD@" /etc/yum.repos.d/edb.repo
    ```

3.  Install the EPEL repository:

    ```text
    dnf -y install https://dl.fedoraproject.org/pub/epel/epel-release-latest-8.noarch.rpm
    ```

4.  Enable the additional repositories to resolve dependencies:

    ```text
    ARCH=$( /bin/arch ) subscription-manager repos --enable "codeready-builder-for-rhel-8-${ARCH}-rpms"
    ```

5.  Disable the built-in PostgreSQL module:

    ```text
    dnf -qy module disable postgresql
    ```
6.  Install the selected package:
    
    ```text
    dnf install edb-as<xx>-hdfs_fdw
    ```

    where `xx` is the server version number.



<div id="centos7" class="registered_link"></div>

### On CentOS 7

1.  To create the repository configuration file, assume superuser privileges, and invoke the following command:

    ```text
    yum -y install https://yum.enterprisedb.com/edbrepos/edb-repo-latest.noarch.rpm
    ```

2.  Replace ‘USERNAME:PASSWORD’ below with your username and password for the EDB repositories:

    ```text
    sed -i "s@<username>:<password>@USERNAME:PASSWORD@" /etc/yum.repos.d/edb.repo
    ```

3.  Install the EPEL repository:

    ```text
    yum -y install https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
    ```

4.  Install the selected package:

    ```text
    dnf install edb-as<xx>-hdfs_fdw
    ```

    where `xx` is the server version number. 




<div id="centos8" class="registered_link"></div>

### On Rocky Linux/AlmaLinux 8


1. To create the repository configuration file, assume superuser privileges, and invoke the following command:
    
    ```text
    dnf -y install https://yum.enterprisedb.com/edbrepos/edb-repo-latest.noarch.rpm
    ```

2.  Replace ‘USERNAME:PASSWORD’ below with your username and password for the EDB repositories:

    ```text
    sed -i "s@<username>:<password>@USERNAME:PASSWORD@" /etc/yum.repos.d/edb.repo
    ```

3.  Install the EPEL repository:

    ```text
    dnf -y install epel-release
    ```

4.  Enable the additional repositories to resolve dependencies:

    ```text
    dnf config-manager --set-enabled PowerTools
    ```

5.  Disable the built-in PostgreSQL module:

    ```text
    dnf -qy module disable postgresql
    ```
6.  Install the selected package:
    
    ```text
    dnf install edb-as<xx>-hdfs_fdw
    ```

    where `xx` is the server version number.



## Installing the Hadoop Foreign Data Wrapper on a Debian or Ubuntu Host

To install the Hadoop Foreign Data Wrapper on a Debian or Ubuntu host, you must have credentials that allow access to the EDB repository. To request credentials for the repository, visit the [EDB website](https://www.enterprisedb.com/repository-access-request/).

The following steps will walk you through on using the EDB apt repository to install a Debian package. When using the commands, replace the `username` and `password` with the credentials provided by EDB.

1.  Assume superuser privileges:

    ```text
    sudo su –
    ```

2.  Configure the EnterpriseDB repository:

    On Debian 9 and Ubuntu:

    > ```text
    > sh -c 'echo "deb https://username:password@apt.enterprisedb.com/$(lsb_release -cs)-edb/ $(lsb_release -cs) main" > /etc/apt/sources.list.d/edb-$(lsb_release -cs).list'
    > ```

    On Debian 10:

    1.  Set up the EDB repository:

    > ```text
    > sh -c 'echo "deb [arch=amd64] https://apt.enterprisedb.com/$(lsb_release -cs)-edb/ $(lsb_release -cs) main" > /etc/apt/sources.list.d/edb-$(lsb_release -cs).list'
    > ```

    1.  Substitute your EDB credentials for the `username` and `password` in the following command:

    > ```text
    > sh -c 'echo "machine apt.enterprisedb.com login <username> password <password>" > /etc/apt/auth.conf.d/edb.conf'
    > ```

3.  Add support to your system for secure APT repositories:

    ```text
    apt-get install apt-transport-https
    ```

4.  Add the EDB signing key:

    ```text
    wget -q -O - https://username:password
    @apt.enterprisedb.com/edb-deb.gpg.key | apt-key add -
    ```

5.  Update the repository metadata:

    ```text
    apt-get update
    ```

6.  Install the package:

    ```text
    apt-get install edb-as<xx>-hdfs-fdw
    ```

    where `xx` is the server version number.
