product_docs/docs/hadoop_data_adapter/2.1.0/05_installing_the_hadoop_data_adapter.mdx
---
title: "Installing the Hadoop Foreign Data Wrapper"
---

<div id="installing_the_hadoop_data_adapter" class="registered_link"></div>


<div id="using_an_rpm_package_to_install_the_data_adapter" class="registered_link"></div>

## Installing on Linux x86-64 (amd64)  

You can install the Hadoop Foreign Data Wrapper on the following operating systems on x86-64:

-   [RHEL 8](#rhel8)
-   [RHEL 7](#rhel7)
-   [Rocky Linux/AlmaLinux 8](#centos8)
-   [CentOS 7](#centos7)
-   [SLES 15](#on-sles-15-x86_64)
-   [SLES 12](#on-sles-12-x86_64)
-   [Ubuntu/Debian](#on-debian-or-ubuntu-x86_64)



<div id="rhel8" class="registered_link"></div>

### On RHEL 8 x86_64

1. To create the repository configuration file, assume superuser privileges, and invoke the following command:
    
    ```text
    dnf -y install https://yum.enterprisedb.com/edbrepos/edb-repo-latest.noarch.rpm
    ```

2.  Replace ‘USERNAME:PASSWORD’ below with your username and password for the EDB repositories:

    ```text
    sed -i "s@<username>:<password>@USERNAME:PASSWORD@" /etc/yum.repos.d/edb.repo
    ```

3.  Install the EPEL repository:

    ```text
    dnf -y install https://dl.fedoraproject.org/pub/epel/epel-release-latest-8.noarch.rpm
    ```

4.  Enable the additional repositories to resolve dependencies:

    ```text
    ARCH=$( /bin/arch ) subscription-manager repos --enable "codeready-builder-for-rhel-8-${ARCH}-rpms"
    ```

5.  Disable the built-in PostgreSQL module:

    ```text
    dnf -qy module disable postgresql
    ```
6.  Install the selected package:
    
    ```text
    dnf install edb-as<xx>-hdfs_fdw
    ```

    where `xx` is the server version number.

<div id="rhel7" class="registered_link"></div>

### On RHEL 7 x86_64

1.  To create the repository configuration file, assume superuser privileges, and invoke the following command:

    ```text
    yum -y install https://yum.enterprisedb.com/edbrepos/edb-repo-latest.noarch.rpm
    ```

2.  Replace ‘USERNAME:PASSWORD’ below with your username and password for the EDB repositories:

    ```text
    sed -i "s@<username>:<password>@USERNAME:PASSWORD@" /etc/yum.repos.d/edb.repo
    ```

3.  Install the EPEL repository:

    ```text
    yum -y install https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
    ```

4.  Enable the additional repositories to resolve dependencies:

    ```text
    subscription-manager repos --enable "rhel-*-optional-rpms" --enable "rhel-*-extras-rpms"  --enable "rhel-ha-for-rhel-*-server-rpms"
    ```

5.  Install the selected package:

    ```text
    dnf install edb-as<xx>-hdfs_fdw
    ```

    where `xx` is the server version number.

<div id="centos8" class="registered_link"></div>

### On Rocky Linux/AlmaLinux 8 x86_64


1. To create the repository configuration file, assume superuser privileges, and invoke the following command:
    
    ```text
    dnf -y install https://yum.enterprisedb.com/edbrepos/edb-repo-latest.noarch.rpm
    ```

2.  Replace ‘USERNAME:PASSWORD’ below with your username and password for the EDB repositories:

    ```text
    sed -i "s@<username>:<password>@USERNAME:PASSWORD@" /etc/yum.repos.d/edb.repo
    ```

3.  Install the EPEL repository:

    ```text
    dnf -y install epel-release
    ```

4.  Enable the additional repositories to resolve dependencies:

    ```text
    dnf config-manager --set-enabled PowerTools
    ```

5.  Disable the built-in PostgreSQL module:

    ```text
    dnf -qy module disable postgresql
    ```
6.  Install the selected package:
    
    ```text
    dnf install edb-as<xx>-hdfs_fdw
    ```

    where `xx` is the server version number.

<div id="centos7" class="registered_link"></div>

### On CentOS 7 x86_64

1.  To create the repository configuration file, assume superuser privileges, and invoke the following command:

    ```text
    yum -y install https://yum.enterprisedb.com/edbrepos/edb-repo-latest.noarch.rpm
    ```

2.  Replace ‘USERNAME:PASSWORD’ below with your username and password for the EDB repositories:

    ```text
    sed -i "s@<username>:<password>@USERNAME:PASSWORD@" /etc/yum.repos.d/edb.repo
    ```

3.  Install the EPEL repository:

    ```text
    yum -y install https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
    ```

4.  Install the selected package:

    ```text
    dnf install edb-as<xx>-hdfs_fdw
    ```

    where `xx` is the server version number. 

### On SLES 15 x86_64

There are two steps to completing an installation:

- Setting up the repository
- Installing the package

For each step, you must be logged in as superuser.

```shell
# To log in as a superuser:
sudo su -
```

Before setting up the repository, you need to register with EDB. To receive credentials for the EDB repository, visit: [Repository Access Request](https://www.enterprisedb.com/repository-access-request).

#### Setting up the Repository

Setting up the repository is a one time task. If you have already set up your repository, you do not need to perform these steps.

```shell
# Install the repository configuration and enter your EDB repository 
# credentials when prompted
zypper addrepo https://zypp.enterprisedb.com/suse/edb-sles.repo

# Install SUSEConnect to register the host with SUSE, allowing access to 
# SUSE repositories
zypper install SUSEConnect

# Register the host with SUSE, allowing access to SUSE repositories
# Replace 'REGISTRATION_CODE' and 'EMAIL' with your SUSE registration 
# information
SUSEConnect -r 'REGISTRATION_CODE' -e 'EMAIL'

# Activate the required SUSE module
SUSEConnect -p PackageHub/15.3/x86_64

# Refresh the metadata
zypper refresh
```

#### Installing the Package

```shell
zypper -n install edb-as14-hdfs_fdw
```

### On SLES 12 x86_64

There are three steps to completing an installation:

- Setting up the repository
- Installing the package


For each step, you must be logged in as superuser.

```shell
# To log in as a superuser:
sudo su -
```

Before setting up the repository, you need to register with EDB. To receive credentials for the EDB repository, visit: [Repository Access Request](https://www.enterprisedb.com/repository-access-request).

#### Setting up the Repository

Setting up the repository is a one time task. If you have already set up your repository, you do not need to perform these steps.

```shell
# Install the repository configuration and enter your EDB repository 
# credentials when prompted
zypper addrepo https://zypp.enterprisedb.com/suse/edb-sles.repo

# Install SUSEConnect to register the host with SUSE, allowing access to 
# SUSE repositories
zypper install SUSEConnect

# Register the host with SUSE, allowing access to SUSE repositories
# Replace 'REGISTRATION_CODE' and 'EMAIL' with your SUSE registration 
# information
SUSEConnect -r 'REGISTRATION_CODE' -e 'EMAIL'

# Activate the required SUSE modules
SUSEConnect -p PackageHub/12.5/x86_64
SUSEConnect -p sle-sdk/12.5/x86_64

# Refresh the metadata
zypper refresh
```

#### Installing the Package

```shell
zypper -n install edb-as14-hdfs_fdw
```




### On Debian or Ubuntu x86_64

To install the Hadoop Foreign Data Wrapper on a Debian or Ubuntu host, you must have credentials that allow access to the EDB repository. To request credentials for the repository, visit the [EDB website](https://www.enterprisedb.com/repository-access-request/).

The following steps will walk you through on using the EDB apt repository to install a Debian package. When using the commands, replace the `username` and `password` with the credentials provided by EDB.

1.  Assume superuser privileges:

    ```text
    sudo su –
    ```

2.  Configure the EnterpriseDB repository:

    On Debian 9 and Ubuntu:

    > ```text
    > sh -c 'echo "deb https://username:password@apt.enterprisedb.com/$(lsb_release -cs)-edb/ $(lsb_release -cs) main" > /etc/apt/sources.list.d/edb-$(lsb_release -cs).list'
    > ```

    On Debian 10:

    1.  Set up the EDB repository:

    > ```text
    > sh -c 'echo "deb [arch=amd64] https://apt.enterprisedb.com/$(lsb_release -cs)-edb/ $(lsb_release -cs) main" > /etc/apt/sources.list.d/edb-$(lsb_release -cs).list'
    > ```

    1.  Substitute your EDB credentials for the `username` and `password` in the following command:

    > ```text
    > sh -c 'echo "machine apt.enterprisedb.com login <username> password <password>" > /etc/apt/auth.conf.d/edb.conf'
    > ```

3.  Add support to your system for secure APT repositories:

    ```text
    apt-get install apt-transport-https
    ```

4.  Add the EDB signing key:

    ```text
    wget -q -O - https://username:password
    @apt.enterprisedb.com/edb-deb.gpg.key | apt-key add -
    ```

5.  Update the repository metadata:

    ```text
    apt-get update
    ```

6.  Install the package:

    ```text
    apt-get install edb-as<xx>-hdfs-fdw
    ```

    where `xx` is the server version number.

## Installing on IBM Power (ppc64le)

You can install the Hadoop Foreign Data Wrapper on the following operating systems on IBM Power (ppc64le):

 - [RHEL 8](#on-rhel-8-1-ppc64le)
 - [RHEL 7](#on-rhel-7-or-centos-7)
 - [SLES 15](#on-sles-15-ppc64le)
 - [SLES 12](#on-sles-12-ppc64le)


### On RHEL 8 ppc64le
There are two steps to completing an installation:

- Setting up the repository
- Installing the package

For each step, you must be logged in as superuser.

To log in as a superuser:

```shell
sudo su -
```

#### Setting up the Repository

1. To register with EDB to receive credentials for the EDB repository, visit: [Repository Access Request](https://www.enterprisedb.com/repository-access-request).

1. Set up the EDB repository:

   ```shell
   dnf -y install https://yum.enterprisedb.com/edbrepos/edb-repo-latest.noarch.rpm
   ```

   This creates the /etc/yum.repos.d/edb.repo configuration file.

1. Add your EDB credentials to the edb.repo file:  

   ```shell
   sed -i "s@<username>:<password>@USERNAME:PASSWORD@" /etc/yum.repos.d/edb.repo
   ```

   where `USERNAME:PASSWORD` is the username and password available from your
   [EDB account](https://www.enterprisedb.com/user).

1. Install the EPEL repository and refresh the cache:

   ```shell
   dnf -y install https://dl.fedoraproject.org/pub/epel/epel-release-latest-8.noarch.rpm
   dnf makecache
   ```

1. Enable the codeready-builder-for-rhel-8-\*-rpms repository since EPEL packages may depend on packages from it:

   ```shell
   ARCH=$( /bin/arch )
   subscription-manager repos --enable "codeready-builder-for-rhel-8-${ARCH}-rpms"
   ```

1. Disable the built-in PostgreSQL module:
   ```shell
   dnf -qy module disable postgresql
   ```

#### Installing the Package

```shell
dnf -y install edb-as<xx>-hdfs_fdw
```

where `xx` is the server version number.


<div id="rhel_centos7_PPCLE" class="registered_link"></div>

### On RHEL 7 ppc64le

1.  Use the following command to create a configuration file and install Advance Toolchain:

    ```text
    rpm --import https://public.dhe.ibm.com/software/server/POWER/Linux/toolchain/at/redhat/RHEL7/gpg-pubkey-6976a827-5164221b

    cat > /etc/yum.repos.d/advance-toolchain.repo <<EOF
    # Begin of configuration file
    [advance-toolchain]
    name=Advance Toolchain IBM FTP
    baseurl=https://public.dhe.ibm.com/software/server/POWER/Linux/toolchain/at/redhat/RHEL7
    failovermethod=priority
    enabled=1
    gpgcheck=1
    gpgkey=ftp://public.dhe.ibm.com/software/server/POWER/Linux/toolchain/at/redhat/RHELX/gpg-pubkey-6976a827-5164221b
    # End of configuration file
    EOF
    ```

2.  Install the EDB repository:

    ```text
    yum -y install https://yum.enterprisedb.com/edbrepos/edb-repo-latest.noarch.rpm
    ```

3.  Replace ‘USERNAME:PASSWORD’ below with your username and password for the EDB repositories:

    ```text
    sed -i "s@<username>:<password>@USERNAME:PASSWORD@" /etc/yum.repos.d/edb.repo
    ```

4.  Install the EPEL repository:

    ```text
    yum -y install https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
    ```

5.  On RHEL 7 PPCLE, enable the additional repositories to resolve EPEL dependencies:

    ```text
    subscription-manager repos --enable "rhel-*-optional-rpms" --enable "rhel-*-extras-rpms"  --enable "rhel-ha-for-rhel-*-server-rpms"
    ```

6.  Install the selected package:

    ```text
    dnf install edb-as<xx>-hdfs_fdw
    ```

    where `xx` is the server version number.


### On SLES 15 ppc64le

There are two steps to completing an installation:

- Setting up the repository
- Installing the package

For each step, you must be logged in as superuser.

```shell
# To log in as a superuser:
sudo su -
```

Before setting up the repository, you need to register with EDB. To receive credentials for the EDB repository, visit: [Repository Access Request](https://www.enterprisedb.com/repository-access-request).

#### Setting up the Repository

Setting up the repository is a one time task. If you have already set up your repository, you do not need to perform these steps.

```shell
# Install the repository configuration and enter your EDB repository 
# credentials when prompted
zypper addrepo https://zypp.enterprisedb.com/suse/edb-sles.repo

# Install SUSEConnect to register the host with SUSE, allowing access to 
# SUSE repositories
zypper install SUSEConnect

# Register the host with SUSE, allowing access to SUSE repositories
# Replace 'REGISTRATION_CODE' and 'EMAIL' with your SUSE registration 
# information
SUSEConnect -r 'REGISTRATION_CODE' -e 'EMAIL'

# Activate the required SUSE module
SUSEConnect -p PackageHub/15.3/ppc64le

# Refresh the metadata
zypper refresh
```

#### Installing the Package

```shell
zypper -n install edb-as14-hdfs_fdw
```

### On SLES 12 ppc64le

There are two steps to completing an installation:

- Setting up the repository
- Installing the package

For each step, you must be logged in as superuser.

```shell
# To log in as a superuser:
sudo su -
```

Before setting up the repository, you need to register with EDB. To receive credentials for the EDB repository, visit: [Repository Access Request](https://www.enterprisedb.com/repository-access-request).

#### Setting up the Repository

Setting up the repository is a one time task. If you have already set up your repository, you do not need to perform these steps.

```shell
# Install the repository configuration and enter your EDB repository 
# credentials when prompted
zypper addrepo https://zypp.enterprisedb.com/suse/edb-sles.repo

# Install SUSEConnect to register the host with SUSE, allowing access to 
# SUSE repositories
zypper install SUSEConnect

# Register the host with SUSE, allowing access to SUSE repositories
# Replace 'REGISTRATION_CODE' and 'EMAIL' with your SUSE registration 
# information
SUSEConnect -r 'REGISTRATION_CODE' -e 'EMAIL'

# Activate the required SUSE modules
SUSEConnect -p PackageHub/12.5/ppc64le
SUSEConnect -p sle-sdk/12.5/ppc64le

# Refresh the metadata
zypper refresh

# Install OpenJDK (version 11) 
zypper -n install java-11-openjdk
```

#### Installing the Package

```shell
zypper -n install edb-as14-hdfs_fdw
```


